Fixed injury and leave behind mechanism. Tested and edited win/lose.

--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ h1 {
 }
 
 
-/* Info panel */
+/* Info block */
 
-#info-container {
+#info-block {
     height: 2rem;
 }
 
